--- a/app/src/main/res/layout/item_add_ppcustomer.xml
+++ b/app/src/main/res/layout/item_add_ppcustomer.xml
@@ -43,9 +43,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
         android:background="@android:color/white"
-        android:padding="20dp"
-        android:layout_marginTop="1dp">
+        android:padding="20dp">
 
         <TextView
             style="@style/ContentText"
@@ -67,9 +67,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="1dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
         android:background="@android:color/white"
         android:padding="20dp">
 
