--- a/app/src/main/res/layout/item_weeksum_foot.xml
+++ b/app/src/main/res/layout/item_weeksum_foot.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="5dp"
             android:text="@string/add_work"
+            android:textSize="@dimen/text_size_18"
             android:textColor="@color/colorPrimary"
             />
 
@@ -33,6 +34,7 @@
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:layout_marginBottom="10dp"
         android:padding="10dp">
 
         <LinearLayout
