--- a/app/src/main/res/layout/item_write_daysum.xml
+++ b/app/src/main/res/layout/item_write_daysum.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorBackground"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
         android:background="@android:color/white"
         android:padding="10dp">
 
@@ -15,17 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:src="@mipmap/ic_xrz_workrank"/>
-
-        <TextView
-            android:id="@+id/tv_daysum_sort"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/iv_dayplan_sort"
-            android:hint="@string/work_sort"
-            android:paddingLeft="10dp"
-            />
+            android:src="@mipmap/ic_xrz_workrank" />
 
         <ImageView
             android:id="@+id/iv_delete"
@@ -33,13 +25,27 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:src="@mipmap/ic_xrz_delete"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/tv_daysum_sort"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@id/iv_delete"
+            android:layout_toRightOf="@id/iv_dayplan_sort"
+            android:hint="@string/work_sort"
+            android:paddingLeft="10dp"
+            android:textColor="@color/colorIconText"
+            android:textSize="15sp" />
+
 
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
         android:background="@android:color/white"
         android:padding="10dp">
 
@@ -47,17 +53,7 @@
             android:id="@+id/iv_dayplan_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_xrz_context"/>
-
-        <EditText
-            android:id="@+id/tv_daysum_content"
-            style="@style/EditTextStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/iv_dayplan_content"
-            android:hint="@string/work_content"
-            android:paddingLeft="10dp"
-            />
+            android:src="@mipmap/ic_xrz_context" />
 
         <ImageButton
             android:id="@+id/ib_daypsum_yy"
@@ -66,13 +62,25 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@null"
-            android:src="@mipmap/ic_xrz_yuyin"/>
+            android:src="@mipmap/ic_xrz_yuyin" />
+
+        <EditText
+            android:id="@+id/tv_daysum_content"
+            style="@style/EditTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/ib_daypsum_yy"
+            android:layout_toRightOf="@id/iv_dayplan_content"
+            android:hint="@string/work_content"
+            android:paddingLeft="10dp" />
+
 
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
         android:background="@android:color/white"
         android:padding="10dp">
 
@@ -81,7 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:src="@mipmap/ic_xrz_person"/>
+            android:src="@mipmap/ic_xrz_person" />
 
         <EditText
             android:id="@+id/et_daysum_person"
@@ -91,8 +99,7 @@
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/iv_dayplan_person"
             android:hint="@string/execute_person"
-            android:paddingLeft="10dp"
-            />
+            android:paddingLeft="10dp" />
 
     </RelativeLayout>
 
@@ -100,31 +107,31 @@
         android:id="@+id/ll_complete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:orientation="horizontal"
+        android:background="@android:color/white"
         android:gravity="center_vertical"
-        android:background="@android:color/white">
+        android:orientation="horizontal"
+        android:layout_marginBottom="10dp"
+        android:padding="10dp">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_xrz_wcqk"/>
+            android:src="@mipmap/ic_xrz_wcqk" />
+
         <TextView
             android:id="@+id/tv_daysum_complete"
+            style="@style/ContentText"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            style="@style/ContentText"
-            android:hint="@string/hint_daysum_wcqk"/>
+            android:layout_weight="1"
+            android:hint="@string/hint_daysum_wcqk" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_grayright_arrow"/>
+            android:src="@mipmap/ic_grayright_arrow" />
 
     </LinearLayout>
-
-
 
 </LinearLayout>
