--- a/app/src/main/res/layout/item_write_week_plan.xml
+++ b/app/src/main/res/layout/item_write_week_plan.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#f5f6f7"
     android:orientation="vertical"
-    android:paddingBottom="20dp">
+    android:paddingBottom="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
             android:gravity="center_vertical"
             android:paddingLeft="10dp"
             android:textColor="#2b2f33"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
         <ImageView
             android:id="@+id/iv_delete"
@@ -57,8 +57,7 @@
             android:layout_weight="1"
             android:hint="工作计划"
             android:textColor="#2b2f33"
-            android:textColorHint="#C5C9CD"
-            android:textSize="18dp" />
+            android:textColorHint="@color/colorContext" />
 
         <ImageView
             android:padding="10dp"
@@ -91,8 +90,7 @@
             android:layout_weight="1"
             android:hint="计划达成目标/完成进度"
             android:textColor="#2b2f33"
-            android:textColorHint="#C5C9CD"
-            android:textSize="18dp" />
+            android:textColorHint="@color/colorContext" />
     </LinearLayout>
 
     <LinearLayout
@@ -118,15 +116,14 @@
             android:layout_weight="1"
             android:hint="此工作所占比重"
             android:textColor="#2b2f33"
-            android:textColorHint="#C5C9CD"
-            android:textSize="18dp" />
+            android:textColorHint="@color/colorContext" />
     </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/rl_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:background="#ffffff"
         android:gravity="center"
         android:visibility="gone">
