--- a/app/src/main/res/layout/item_xrz_foot.xml
+++ b/app/src/main/res/layout/item_xrz_foot.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#ffffff"
-                android:orientation="vertical"
-                android:id="@+id/rl_addjob"
-                android:padding="10dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/rl_addjob"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center_vertical"
+        android:background="#ffffff"
+        android:gravity="center"
+        android:padding="10dp"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_xrz_add"/>
+            android:src="@mipmap/ic_xrz_add" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="5dp"
             android:text="@string/add_work"
-            android:textColor="@color/colorPrimary"
-            />
+            android:textSize="@dimen/text_size_18"
+            android:textColor="@color/colorPrimary" />
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
