--- a/app/src/main/res/layout/item_xs_xrzj_foot.xml
+++ b/app/src/main/res/layout/item_xs_xrzj_foot.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="5dp"
             android:text="@string/add_work"
+            android:textSize="@dimen/text_size_18"
             android:textColor="@color/colorPrimary"
             />
 
