--- a/app/src/main/res/layout/frgment_batlefield_report.xml
+++ b/app/src/main/res/layout/frgment_batlefield_report.xml
@@ -52,6 +52,10 @@
         app:tabTextAppearance="@style/ContentText"
         app:tabSelectedTextColor="@color/colorPrimary"
         />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#F5F6F7" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
