--- a/app/src/main/res/layout/activity_field_clock.xml
+++ b/app/src/main/res/layout/activity_field_clock.xml
@@ -9,23 +9,37 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/titlebar_height" />
 
-    <com.baidu.mapapi.map.MapView
-        android:id="@+id/bmapView"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:clickable="true" />
+        android:layout_height="160dp">
+
+        <com.baidu.mapapi.map.MapView
+            android:id="@+id/bmapView"
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:clickable="true" />
+
+        <ImageView
+            android:id="@+id/iv_positioning"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:background="@mipmap/ic_positioning" />
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginTop="5dp"
+        android:layout_weight="1" />
+
     <com.wtcrmandroid.view.custompricing.WaveRipView
         android:id="@+id/bt_clock"
         android:layout_width="180dp"
         android:layout_height="180dp"
-        android:layout_gravity="center_horizontal"
-        />
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
