--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -2,26 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="25dp">
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="match_parent"
-        android:layout_height="38dp"
-        android:background="#f5f6f7"
-        android:gravity="center_vertical"
-        android:paddingLeft="10dp"
-        android:text="OA办公"
-        android:textColor="#939699"
-        android:textSize="13dp"
-        android:layout_marginTop="25dp"/>
 
     <ImageView
         android:id="@+id/iv_image"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="25dp"/>
+        />
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
