--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="colorContext">#939699</color>
 
     <color name="pulltorefresh_bg">#BCBCBC</color>
-    <color name="lineColor">#c4c8cc</color>
+    <color name="lineColor">#E9EDF2</color>
 
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
