--- a/app/src/main/res/layout/text_location_box.xml
+++ b/app/src/main/res/layout/text_location_box.xml
@@ -4,13 +4,13 @@
     android:layout_height="wrap_content">
     <TextView
         android:id="@+id/tv_address"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:background="@mipmap/ic_location_box"
         android:text="在御玺大厦附近"
         android:paddingLeft="5dp"
-        android:paddingRight="5dp"
+        android:paddingRight="10dp"
         android:paddingTop="5dp"
-        android:paddingBottom="10dp"/>
+        android:paddingBottom="15dp"/>
 
 </LinearLayout>
