--- a/app/src/main/res/layout/widget_title_bar.xml
+++ b/app/src/main/res/layout/widget_title_bar.xml
@@ -52,8 +52,8 @@
 
         <ImageView
             android:id="@+id/right_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_centerInParent="true"
             android:layout_marginRight="10dp"
             android:scaleType="centerInside" />
