--- a/app/src/main/res/layout/activity_clock_record.xml
+++ b/app/src/main/res/layout/activity_clock_record.xml
@@ -9,7 +9,8 @@
     <com.wtcrmandroid.view.pulltorefresh.SwipeToLoadLayout
         android:id="@+id/swipeToLoadLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#F5F6F7">
 
         <include
             android:id="@id/swipe_refresh_header"
