--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="color_text_black">#222222</color>
     <color name="black_alpha">#55333333</color>
     <color name="color_gray_999">#999</color>
+    <color name="hint">#c4c8cc</color>
 </resources>
