--- a/app/src/main/res/layout/activity_battlefield_report.xml
+++ b/app/src/main/res/layout/activity_battlefield_report.xml
@@ -36,8 +36,8 @@
 
             <ImageView
                 android:id="@+id/iv_center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 android:layout_marginLeft="10dp"
                 android:background="@mipmap/ic_arrow_down_white" />
         </LinearLayout>
