--- a/app/src/main/res/layout/activity_field_clock.xml
+++ b/app/src/main/res/layout/activity_field_clock.xml
@@ -40,7 +40,8 @@
 
     <com.wtcrmandroid.view.custompricing.WaveRipView
         android:id="@+id/bt_clock"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        android:layout_gravity="center_horizontal" />
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10dp"/>
 </LinearLayout>
