--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         <RadioGroup
             android:id="@+id/rg_bottom"
             android:layout_width="match_parent"
-            android:layout_height="62dp"
+            android:layout_height="wrap_content"
             android:background="#ffffff"
             android:gravity="center_vertical"
             android:orientation="horizontal">
