--- a/app/src/main/res/layout/controls_top_choose_menu_bar.xml
+++ b/app/src/main/res/layout/controls_top_choose_menu_bar.xml
@@ -28,8 +28,8 @@
 
             <ImageView
                 android:id="@+id/iv_left"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 android:layout_marginLeft="10dp"
                 android:background="@mipmap/ic_arrow_down" />
         </LinearLayout>
@@ -66,8 +66,8 @@
 
             <ImageView
                 android:id="@+id/iv_center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 android:layout_marginLeft="10dp"
                 android:background="@mipmap/ic_arrow_down" />
         </LinearLayout>
@@ -100,8 +100,8 @@
 
             <ImageView
                 android:id="@+id/iv_right"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 android:layout_marginLeft="10dp"
                 android:background="@mipmap/ic_arrow_down" />
         </LinearLayout>
