--- a/app/src/main/res/layout/fragment_total_achievements.xml
+++ b/app/src/main/res/layout/fragment_total_achievements.xml
@@ -453,5 +453,9 @@
                 android:textColor="#f76129"
                 android:textSize="@dimen/text_size_12" />
         </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/lineColor" />
     </LinearLayout>
 </ScrollView>
