--- a/app/src/main/res/layout/overlay_view.xml
+++ b/app/src/main/res/layout/overlay_view.xml
@@ -9,8 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="6dp"
-        android:background="@mipmap/ic_location_box"
         android:gravity="center"
+        android:background="@drawable/ic_location_text"
         android:paddingBottom="10dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
