--- a/app/src/main/res/layout/text_location_box.xml
+++ b/app/src/main/res/layout/text_location_box.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
     <TextView
         android:id="@+id/tv_address"
-        android:layout_width="200dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:background="@mipmap/ic_location_box"
-        android:text="在御玺大厦附近"
+        android:background="@drawable/ic_location_text"
+        android:paddingBottom="10dp"
         android:paddingLeft="5dp"
-        android:paddingRight="10dp"
+        android:paddingRight="5dp"
         android:paddingTop="5dp"
-        android:paddingBottom="15dp"/>
+        android:text="在御玺大厦附近" />
 
 </LinearLayout>
