--- a/app/src/main/res/layout/activity_client_library.xml
+++ b/app/src/main/res/layout/activity_client_library.xml
@@ -13,28 +13,40 @@
         android:id="@+id/tcmb_bar"
         android:layout_width="match_parent"
         android:layout_height="44dp" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/lineColor"
-        />
+        android:background="@color/lineColor" />
 
-    <com.wtcrmandroid.view.pulltorefresh.SwipeToLoadLayout
-        android:id="@+id/swipeToLoadLayout"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include
-            android:id="@id/swipe_refresh_header"
-            layout="@layout/layout_refresh_header" />
-        <android.support.v7.widget.RecyclerView
-            android:id="@id/swipe_target"
+        <com.wtcrmandroid.view.pulltorefresh.SwipeToLoadLayout
+            android:id="@+id/swipeToLoadLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent">
 
-        <include
-            android:id="@id/swipe_load_more_footer"
-            layout="@layout/layout_loadmore_footer" />
+            <include
+                android:id="@id/swipe_refresh_header"
+                layout="@layout/layout_refresh_header" />
 
-    </com.wtcrmandroid.view.pulltorefresh.SwipeToLoadLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@id/swipe_target"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <include
+                android:id="@id/swipe_load_more_footer"
+                layout="@layout/layout_loadmore_footer" />
+
+        </com.wtcrmandroid.view.pulltorefresh.SwipeToLoadLayout>
+        <View
+            android:id="@+id/v_shadow"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#66000000"
+            android:visibility="gone"/>
+    </RelativeLayout>
 </LinearLayout>
