--- a/app/src/main/res/layout/activity_field_statistics.xml
+++ b/app/src/main/res/layout/activity_field_statistics.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#F5F6F7">
+    android:background="#F5F6F7"
+    android:orientation="vertical">
 
     <com.wtcrmandroid.view.custompricing.TitleBar
         android:id="@+id/titlebar"
@@ -20,10 +20,22 @@
         android:layout_height="1dp"
         android:background="#e9edf2" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_view"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp" />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp" />
+
+        <View
+            android:id="@+id/v_shadow"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#66000000"
+            android:visibility="gone" />
+    </RelativeLayout>
 
 </LinearLayout>
