--- a/app/src/main/res/layout/activity_mycard.xml
+++ b/app/src/main/res/layout/activity_mycard.xml
@@ -1,131 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/colorBackground"
+    android:orientation="vertical"
     tools:context="com.wtcrmandroid.activity.aboutmy.MycardActivity">
 
     <com.wtcrmandroid.view.custompricing.TitleBar
         android:id="@+id/titlebar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/titlebar_height">
-    </com.wtcrmandroid.view.custompricing.TitleBar>
+        android:layout_height="@dimen/titlebar_height"></com.wtcrmandroid.view.custompricing.TitleBar>
 
-    <ScrollView
-        android:id="@+id/scrll"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shap_card"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="30dp">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <ScrollView
+            android:id="@+id/scrll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/shap_card">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <com.thinkcool.circletextimageview.CircleTextImageView
+                    android:id="@+id/Circle_image"
+                    android:layout_width="65dp"
+                    android:layout_height="65dp"
+                    android:layout_gravity="right"
+                    android:layout_marginBottom="45dp"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="35dp"
+                    app:citv_fill_color="@color/colorPrimary"
+                    app:citv_text_color="@color/white"
+                    app:citv_text_size="@dimen/text_size_18"
+                    app:citv_text_text="阿东" />
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="45dp"
+                    android:layout_gravity="right"
+                    android:background="@color/colorPrimary"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:text="阿东"
+                        android:textColor="@color/white"
+                        android:textSize="22sp" />
+
+                    <TextView
+                        android:id="@+id/tv_job"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBaseline="@id/tv_name"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginRight="100dp"
+                        android:layout_toRightOf="@id/tv_name"
+                        android:text="安卓开发"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/text_size_14" />
+
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="45dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="M："
+                        android:textColor="@color/colorIconText"
+                        android:textSize="@dimen/Text36" />
+
+                    <TextView
+                        android:id="@+id/tv_phone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="1234567987"
+                        android:textColor="@color/colorIconText"
+                        android:textSize="@dimen/Text36" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="85dp"
+                        android:background="@color/colorPrimary" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="15dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="5dp"
+                        android:text="北京物通时空网络科技开发有限公司"
+                        android:textColor="@color/colorIconText"
+                        android:textSize="@dimen/text_size_16" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+        </ScrollView>
+        <View
+            android:id="@+id/v_shadow"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <com.thinkcool.circletextimageview.CircleTextImageView
-                android:id="@+id/Circle_image"
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                app:citv_text_color="@color/white"
-                app:citv_fill_color="@color/colorPrimary"
-                app:citv_text_size="@dimen/text_size_18"
-                app:citv_text_text="阿东"
-                android:layout_gravity="right"
-                android:layout_marginTop="35dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginBottom="45dp"/>
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="45dp"
-                android:background="@color/colorPrimary"
-                android:layout_gravity="right"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:textSize="22sp"
-                    android:text="阿东"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"/>
-
-                <TextView
-                    android:id="@+id/tv_job"
-                    android:layout_toRightOf="@id/tv_name"
-                    android:layout_alignBaseline="@id/tv_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/text_size_14"
-                    android:textColor="@color/white"
-                    android:text="安卓开发"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginRight="100dp"/>
-
-            </RelativeLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_marginTop="45dp"
-                android:orientation="horizontal"
-                android:gravity="center">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorIconText"
-                    android:textSize="@dimen/Text36"
-                    android:text="M："/>
-
-                <TextView
-                    android:id="@+id/tv_phone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorIconText"
-                    android:textSize="@dimen/Text36"
-                    android:text="1234567987"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="85dp"
-                    android:layout_marginLeft="20dp"
-                    android:background="@color/colorPrimary"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/colorIconText"
-                    android:textSize="@dimen/text_size_16"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="15dp"
-                    android:text="北京物通时空网络科技开发有限公司"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-    </ScrollView>
-
-
+            android:background="#66000000"
+            android:visibility="gone"/>
+    </RelativeLayout>
 
 </LinearLayout>
