--- a/app/src/main/res/layout/dialog_loading.xml
+++ b/app/src/main/res/layout/dialog_loading.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:indeterminate="false"
         android:indeterminateDrawable="@drawable/dialog_style_xml_color"
-        android:layout_centerInParent="true"/>
+        android:layout_centerHorizontal="true"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,6 +20,6 @@
         android:textColor="@color/colorPrimary"
         android:textSize="@dimen/text_size_16"
         android:layout_below="@+id/loading_process_dialog_progressBar"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="10dp"/>
 
 </RelativeLayout>
