--- a/app/src/main/res/layout/item_home_head.xml
+++ b/app/src/main/res/layout/item_home_head.xml
@@ -9,6 +9,7 @@
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="38dp"
+        android:layout_marginLeft="10dp"
         android:background="#f5f6f7"
         android:gravity="center_vertical"
         android:text="OA办公"
